# parser

./: .env  Dockerfile  README.md  alembic.ini  config.py  docker-compose.yml  main.py  pyproject.toml
background/: celery_app.py
db/: connector.py
db/migrations/: env.py
db/migrations/versions/: 0a6747902b5d_initial.py
db/models/: __init__.py  base.py  llm.py  sales.py
db/repositories/: base.py  llm_repository.py  sales_repository.py
presentations/routes/: sales.py
presentations/schemas/: sales.py
services/: llm_service.py  sales_service.py
test/: test_celery_app.py  test_llm_service.py  test_routes.py  test_sale_service.py
transfer/dto/: base.py  llm_dto.py  sales_dto.py
